[package]
name = "opengl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
gl = "0.14.0"
glfw = "0.54.0"
image = "0.24.7"
nalgebra = "0.32.3"
palette = "0.7.3"
tobj = "4.0.0"
my_gl = { git = "https://github.com/DiSaber/my_gl.git" }
